# asl-cnn-transformer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
asl_research/: dataloader.py  model.py  predict.py  train.py  train_transformer.py  transformer.py
asl_research/data/: __init__.py  download.py  download.sh  exploration.ipynb  preprocess.py  preprocessing.py
asl_research/exercises/: sampling_test.py  video_augmentation.py
asl_research/model/: attention.py  decoder.py  encoder.py  model.py  position_wise_feed_forward.py  positional_embedding.py  spatial_embedding.py  transformer.py  utils.py
asl_research/utils/: early_stopping.py  utils.py
configs/: model.yaml
docs/: mkdocs.yml
docs/docs/: index.md
tests/: attention_test.py  concat_test.py  dataset_test.py  decoder_test.py  encoder_test.py  spatial_embedding_test.py  split_test.py  transformer_test.py  transformer_training_test.py
